--- a/index.html
+++ b/index.html
@@ -165,28 +165,24 @@
     <div class="grid grid-cols-2 sm:grid-cols-4 gap-10 justify-center">
       
       <!-- DexScreener -->
-      <a href="https://dexscreener.com/yourpage" target="_blank" class="group">
+      <a href="https://dexscreener.com/" target="_blank" class="group">
         <img src="21400380-5c87-49d8-ac0b-17aabf4dea3d.png" alt="DexScreener" 
              class="w-24 h-24 mx-auto opacity-80 group-hover:opacity-100 group-hover:scale-110 transition transform">
       </a>
 
       <!-- X.com -->
-      <a href="https://x.com/yourpage" target="_blank" class="group">
+      <a href="https://x.com/i/communities/1964068814959620554" target="_blank" class="group">
         <img src="af383a4a-cd51-41ee-b6e5-cb3fb2edde4b.png" alt="X.com" 
              class="w-24 h-24 mx-auto opacity-80 group-hover:opacity-100 group-hover:scale-110 transition transform">
       </a>
 
       <!-- Pump.fun -->
-      <a href="https://pump.fun/yourpage" target="_blank" class="group">
+      <a href="https://pump.fun/Dr3MZYDNEKxxHd2KuS22H2jQE1fShR6gWgTkfnBPpump" target="_blank" class="group">
         <img src="2811c000-fc62-4cfe-82b0-4ba15173d23a.jpg" alt="Pump.fun" 
              class="w-24 h-24 mx-auto opacity-80 group-hover:opacity-100 group-hover:scale-110 transition transform">
       </a>
 
-      <!-- Telegram -->
-      <a href="https://t.me/yourpage" target="_blank" class="group">
-        <img src="6516620e-8b31-44b3-babf-f48726e2d1d6.png" alt="Telegram" 
-             class="w-24 h-24 mx-auto opacity-80 group-hover:opacity-100 group-hover:scale-110 transition transform">
-      </a>
+      
 
     </div>
   </div>
@@ -218,3 +214,4 @@
 
 </body>
 </html>
+
